# learning_more_cpp_idioms

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  address_of.cpp  algebraic_hierarchy.cpp  attach_by_initialization.cpp  attorney_client.cpp  build.sh  build_one.sh  build_thread_safe_copy_on_write.sh  env_variable.sh  run.sh  run_one.sh
attach_by_initialization_deps/: server.h
attachment/: expression_template_array_profile_clang++.prof  expression_template_array_profile_clang++.txt  expression_template_array_profile_g++.prof  expression_template_array_profile_g++.txt
attachment/expression_template_array/output/: expression_template_array_benchmark.extra_info  expression_template_array_benchmark_2_clang++.txt  expression_template_array_benchmark_2_g++.txt  expression_template_array_benchmark_clang++.txt  expression_template_array_benchmark_g++.txt  expression_template_array_profile_clang++.compiler_version.txt  expression_template_array_profile_clang++.prof  expression_template_array_profile_g++.compiler_version.txt  expression_template_array_profile_g++.prof  expression_template_array_profile_g++.txt
attachment/expression_template_array/output/benchmark/: expression_template_array_benchmark_2_clang++.txt  expression_template_array_benchmark_2_g++.txt  expression_template_array_benchmark_clang++.txt  expression_template_array_benchmark_g++.txt
attachment/expression_template_array/output/profile/: expression_template_array_profile_clang++.prof  expression_template_array_profile_clang++.txt  expression_template_array_profile_g++.compiler_version.txt  expression_template_array_profile_g++.prof  expression_template_array_profile_g++.txt
script/: expression_template_array_profile.sh
script/get_idioms/: get_idioms.py  get_idioms.sh  idioms_from_web.txt  process_idioms.py  tmp_idioms_from_web.txt
src/: CMakeLists.txt  address_of.cc  algebraic_hierarchy.cc  algebraic_hierarchy.cpp  attach_by_initialization.cc  attorney_client.cc  attorney_client.cpp  barton_nackman_trick.cc  barton_nackman_trick.cpp  base_from_member.cc  base_from_member.cpp  boost_mutant.cc  calling_virtuals_during_initialization.cc  capability_query.cc  checked_delete.cc  clear_and_minimize.cc  coercion_by_member.cc  computational_constructor.cc  concrete_data_type.cc  construct_on_first_use.cc  construction_tracker.cc  copy_and_swap.cc  copy_on_write.cc  counted_body.cc  covariant_return_types.cc  curiously_recurring_template_pattern.cc  curiously_recurring_template_pattern.cpp  empty_base_optimization.cc  enable_if.cc  erase_remove.cc  execute_around_pointer.cc  expression_template.cc  final_class.cc  function_poisoning.cc  generic_container.cc  hierarchy_generation.cc  inline_guard_macro.cc  inner_class.cc  int_to_type.cc  interface_class.cc  (+37 more)
src/attach_by_initialization_deps/: CMakeLists.txt  server.cpp
src/checked_delete_deps/: checked_deleter.cpp  checked_deleter.h  deleter.cpp  deleter.h  object.h
src/expression_template_deps/: CMakeLists.txt  README.md
src/expression_template_deps/array/: concepts.h  operator.h
src/expression_template_deps/array/expression_template/: expression.h  expression_impl.draft.h  expression_impl.draft_1.h  expression_impl.draft_2.h  expression_impl.h  operator.h
src/expression_template_deps/test_array/: CMakeLists.txt  calculation_benchmark.cc  calculation_benchmark_2.cc  calculation_benchmark_deps.h  calculation_deps.h  calculation_profile.cc  calculation_test.cc  calculation_test_deps.h  common.h
src/function_poisoning_deps/: foo.h
src/function_poisoning_deps/__details/: foo.h
src/hierarchy_generation_deps/rust_traits/: Cargo.toml
src/hierarchy_generation_deps/rust_traits/src/: main.rs
src/inline_guard_macro_deps/: CMakeLists.txt  test.cpp  test.h  test.ipp
src/inner_class_deps/rust_traits_same_function_name/: Cargo.toml
src/inner_class_deps/rust_traits_same_function_name/src/: main.rs
src/nifty_counter_deps/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  stream.cpp  stream.h
src/parameterized_base_deps/rust_traits_serializable/: Cargo.toml
src/parameterized_base_deps/rust_traits_serializable/src/: main.rs
src/pointer_to_implementation_deps/: CMakeLists.txt  book.cpp  book.h  book_template_with_pimpl.cpp  book_template_with_pimpl.h  book_with_pimpl.cpp  book_with_pimpl.h
src/temporary_base_class_deps/: CMakeLists.txt  matrix.cpp  matrix.h
src/utils/: CMakeLists.txt  main_decorator.cpp  main_decorator.h
stdout/: SFINAE.txt  address_of.txt  algebraic_hierarchy.txt  attach_by_initialization.txt  attorney_client.txt  barton_nackman_trick.txt  boost_mutant.txt  calling_virtuals_during_initialization.txt  capability_query.txt  checked_delete.txt  clear_and_minimize.txt  coercion_by_member.txt  computational_constructor.txt  concrete_data_type.txt  construct_on_first_use.txt  construction_tracker.txt  copy_and_swap.txt  copy_on_write.txt  counted_body.txt  covariant_return_types.txt  curiously_recurring_template_pattern.txt  empty_base_optimization.txt  enable_if.txt  erase_remove.txt  execute_around_pointer.txt  expression_template.txt  expression_template_array_benchmark.txt  expression_template_array_profile.txt  expression_template_array_test.txt  final_class.txt  function_poisoning.txt  generic_container.txt  hierarchy_generation.txt  inline_guard_macro.txt  inner_class.txt  int_to_type.txt  interface_class.txt  iterator_pair.txt  making_new_friends.txt  member_detector.txt  (+28 more)
